--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Sistema Marbe v31.34 - Correção Produção e NF</title>
+  <title>Sistema Marbe v31.35 - Correção Total Produção</title>
   
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -30,6 +30,7 @@
           if(!window.marbeDB.orçamentos) window.marbeDB.orçamentos = [];
           if(!window.marbeDB.pedidos) window.marbeDB.pedidos = [];
           if(!window.marbeDB.financeiro) window.marbeDB.financeiro = [];
+          if(!window.marbeDB.estoque) window.marbeDB.estoque = {};
           updateUI(); 
       }
     });
@@ -41,9 +42,7 @@
         window.open(url, '_blank');
         const a = document.createElement('a');
         a.href = url; a.download = `${osNum}.pdf`;
-        document.body.appendChild(a);
-        a.click();
-        document.body.removeChild(a);
+        document.body.appendChild(a); a.click(); document.body.removeChild(a);
     };
   </script>
 
@@ -54,18 +53,18 @@
     :root { --primary: #2c7be5; --success: #28a745; --danger: #d9534f; --info: #17a2b8; --dark: #333; }
     body { font-family: sans-serif; background: #f4f7f6; margin: 0; padding: 5px; }
     .container { max-width: 1000px; background: #fff; padding: 15px; border-radius: 8px; margin: auto; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-    .tabs { display: flex; gap: 3px; margin-bottom: 15px; flex-wrap: wrap; }
-    .tab-btn { flex: 1; padding: 10px; border: none; background: #ddd; cursor: pointer; font-weight: bold; border-radius: 8px; font-size: 9px; text-transform: uppercase; min-width: 75px; }
+    .tabs { display: flex; gap: 2px; margin-bottom: 10px; flex-wrap: wrap; }
+    .tab-btn { flex: 1; padding: 8px; border: none; background: #ddd; cursor: pointer; font-weight: bold; border-radius: 5px; font-size: 8px; text-transform: uppercase; min-width: 65px; }
     .tab-btn.active { background: var(--primary); color: white; }
     .section { display: none; }
     .section.active { display: block; }
-    label { display: block; margin-top: 10px; font-weight: bold; font-size: 11px; }
-    input, select, textarea { width: 100%; padding: 8px; margin-top: 5px; border: 1px solid #ccc; border-radius: 5px; font-size: 14px; box-sizing: border-box; }
-    .btn { width: 100%; padding: 10px; border: none; border-radius: 6px; cursor: pointer; font-weight: bold; margin-top: 8px; color: white; text-align: center; display: block; font-size: 12px; }
-    table { width: 100%; border-collapse: collapse; font-size: 11px; margin-top: 10px; }
-    table th, table td { border: 1px solid #ddd; padding: 6px; text-align: left; }
-    .card-list { background: #fff; border: 1px solid #ddd; padding: 12px; border-radius: 8px; margin-bottom: 10px; border-left: 5px solid #ccc; }
-    .editable-input { width: 100%; border: 1px solid #ffd666 !important; background: #fffbe6; padding: 4px; }
+    label { display: block; margin-top: 8px; font-weight: bold; font-size: 10px; }
+    input, select, textarea { width: 100%; padding: 6px; margin-top: 4px; border: 1px solid #ccc; border-radius: 4px; font-size: 13px; box-sizing: border-box; }
+    .btn { width: 100%; padding: 10px; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; margin-top: 8px; color: white; text-align: center; display: block; font-size: 11px; }
+    table { width: 100%; border-collapse: collapse; font-size: 10px; margin-top: 8px; }
+    table th, table td { border: 1px solid #ddd; padding: 5px; text-align: left; }
+    .card-list { background: #fff; border: 1px solid #ddd; padding: 10px; border-radius: 6px; margin-bottom: 8px; border-left: 4px solid #ccc; }
+    .editable-input { width: 100%; border: 1px solid #ffd666 !important; background: #fffbe6; padding: 3px; }
   </style>
 </head>
 <body>
@@ -96,36 +95,29 @@
   </div>
 
   <div id="orc" class="section">
-    <label>OS em Edição: <strong id="osEdicaoLabel">Nova</strong></label>
+    <label>OS: <strong id="osLabel"></strong></label>
     <label>CNPJ Cliente</label><input type="text" id="cnpj" onblur="buscaCNPJ(this.value)">
     <label>Razão Social</label><input type="text" id="razao">
-    <label>Endereço Completo</label><input type="text" id="endereco">
-    <table><thead><tr><th>Descrição</th><th>Medidas</th><th>Cam.</th><th>Qtd</th><th>Unit.</th><th>X</th></tr></thead><tbody id="corpoAtual"></tbody></table>
-    <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px;">
-        <div><label>Frete</label><select id="frete"><option>POR CONTA DO CLIENTE</option><option>POR CONTA DA EMPRESA</option></select></div>
-        <div><label>Prazo Entrega</label><input type="text" id="prazo" value="10 DIAS ÚTEIS"></div>
-    </div>
-    <label>Forma de Pagamento</label><textarea id="pagamento">50% + BOLETO 28DD.</textarea>
+    <label>Endereço</label><input type="text" id="endereco">
+    <table><thead><tr><th>Descrição</th><th>Qtd</th><th>Unit.</th><th>X</th></tr></thead><tbody id="corpoAtual"></tbody></table>
     <h3 style="text-align:right">Total: <span id="totalOrc">R$ 0,00</span></h3>
-    <button class="btn" style="background:var(--primary)" onclick="salvarOrcamento()">SALVAR PEDIDO / ORÇAMENTO</button>
-    <button id="btnCancelaEdit" class="btn" style="background:var(--danger); display:none;" onclick="cancelarEdicao()">CANCELAR EDIÇÃO</button>
+    <button class="btn" style="background:var(--primary)" onclick="salvarOrcamento()">SALVAR NO HISTÓRICO</button>
   </div>
 
   <div id="historico" class="section"><div id="listaOrcamentos"></div></div>
   <div id="pedidos" class="section"><div id="listaPedidos"></div></div>
   <div id="financeiro" class="section"><div id="listaBoletos"></div></div>
   <div id="suprimentos" class="section"><h3>Resumo de Borracha</h3><div id="dashboardSuprimentos"></div></div>
-  <div id="cfg" class="section"><div id="listaCustos"></div>
-    <div style="background:#eee; padding:10px; border-radius:8px; margin-top:10px;">
-        <input type="text" id="matNome" placeholder="Material"><input type="number" id="matPreco" placeholder="Preço KG">
-        <button class="btn" style="background:var(--success)" onclick="addMaterial()">CADASTRAR MATERIAL</button>
-    </div>
+  <div id="cfg" class="section">
+      <div id="listaCustos"></div>
+      <label>Novo Material</label>
+      <input type="text" id="matNome" placeholder="Nome"><input type="number" id="matPreco" placeholder="Preço KG">
+      <button class="btn" style="background:var(--success)" onclick="addMaterial()">CADASTRAR</button>
   </div>
 </div>
 
 <script>
   let itensTemp = [];
-  let idEdicao = null;
 
   function tab(id) {
     document.querySelectorAll('.section, .tab-btn').forEach(e => e.classList.remove('active'));
@@ -134,8 +126,8 @@
   }
 
   function updateUI() {
-    const sel = document.getElementById('matSelect');
-    if(sel) sel.innerHTML = (window.marbeDB.custos.mats || []).map(m => `<option value="${m.p}">${m.n}</option>`).join('');
+    document.getElementById('osLabel').innerText = window.marbeDB.os;
+    document.getElementById('matSelect').innerHTML = (window.marbeDB.custos.mats || []).map(m => `<option value="${m.p}">${m.n}</option>`).join('');
     renderOrcamentos(); renderPedidos(); renderBoletos(); renderCustos();
   }
 
@@ -154,6 +146,7 @@
     const matNome = document.getElementById('matSelect').options[document.getElementById('matSelect').selectedIndex].text;
     const pesoUnit = Math.ceil((Math.PI*(d+e)*l*e)*1200/1000000000);
     const unit = (((pesoUnit*pk*1.1)+(h*window.marbeDB.custos.vh))*2.5)*(1+(parseFloat(document.getElementById('tipoServ').value)));
+    
     itensTemp.push({ n: "Revestimento " + matNome, mat: matNome, med: d + "x" + l + "mm", e: e + "mm", h: h, q: 1, v: unit, kg_unit: pesoUnit });
     renderTabelaAtual(); tab('orc');
   }
@@ -162,29 +155,21 @@
     let total = 0;
     document.getElementById('corpoAtual').innerHTML = itensTemp.map((it, i) => {
         total += it.v * it.q;
-        return `<tr><td><input class="editable-input" value="${it.n}" onchange="itensTemp[${i}].n=this.value"></td><td>${it.med}</td><td>${it.e}</td><td><input type="number" class="editable-input" value="${it.q}" onchange="itensTemp[${i}].q=parseInt(this.value); renderTabelaAtual()"></td><td>${it.v.toFixed(2)}</td><td onclick="itensTemp.splice(${i},1);renderTabelaAtual()">X</td></tr>`;
+        return `<tr><td><input class="editable-input" value="${it.n}" onchange="itensTemp[${i}].n=this.value"></td><td><input type="number" class="editable-input" value="${it.q}" onchange="itensTemp[${i}].q=parseInt(this.value); renderTabelaAtual()"></td><td>${it.v.toFixed(2)}</td><td onclick="itensTemp.splice(${i},1);renderTabelaAtual()">X</td></tr>`;
     }).join('');
     document.getElementById('totalOrc').innerText = "R$ " + total.toFixed(2);
   }
 
   function salvarOrcamento() {
-    const orcData = { os: idEdicao ? idEdicao.os : window.marbeDB.os, cliente: document.getElementById('razao').value, cnpj: document.getElementById('cnpj').value, endereco: document.getElementById('endereco').value, itens: JSON.parse(JSON.stringify(itensTemp)), frete: document.getElementById('frete').value, prazo: document.getElementById('prazo').value, pagamento: document.getElementById('pagamento').value, total: itensTemp.reduce((a,b)=>a+(b.v*b.q),0) };
-    if(idEdicao) {
-        if(idEdicao.origem === 'pedidos') window.marbeDB.pedidos[idEdicao.index] = orcData;
-        else window.marbeDB.orçamentos[idEdicao.index] = orcData;
-        idEdicao = null; document.getElementById('btnCancelaEdit').style.display = 'none'; document.getElementById('osEdicaoLabel').innerText = "Nova";
-    } else {
-        window.marbeDB.orçamentos.push(orcData); window.marbeDB.os++;
-    }
-    window.salvarNuvem(); itensTemp = []; renderTabelaAtual(); tab('historico');
+    window.marbeDB.orçamentos.push({ os: window.marbeDB.os, cliente: document.getElementById('razao').value, cnpj: document.getElementById('cnpj').value, endereco: document.getElementById('endereco').value, itens: JSON.parse(JSON.stringify(itensTemp)), total: itensTemp.reduce((a,b)=>a+(b.v*b.q),0) });
+    window.marbeDB.os++; window.salvarNuvem(); itensTemp = []; renderTabelaAtual(); tab('historico');
   }
 
   function renderOrcamentos() {
     document.getElementById('listaOrcamentos').innerHTML = (window.marbeDB.orçamentos || []).map((o, i) => `
       <div class="card-list"><strong>OS: ${o.os} - ${o.cliente}</strong><br>
-        <button class="btn" style="background:var(--info); display:inline-block; width:31%" onclick="gerarPDF('CLIENTE', ${i}, 'orçamentos')">PDF</button>
-        <button class="btn" style="background:var(--dark); display:inline-block; width:31%" onclick="editarExistente('orçamentos', ${i})">EDITAR</button>
-        <button class="btn" style="background:var(--success); display:inline-block; width:31%" onclick="fecharPedido(${i})">FECHAR</button>
+        <button class="btn" style="background:var(--info); display:inline-block; width:48%" onclick="gerarPDF('CLIENTE', ${i}, 'orçamentos')">PDF CLIENTE</button>
+        <button class="btn" style="background:var(--success); display:inline-block; width:48%" onclick="fecharPedido(${i})">FECHAR PEDIDO</button>
       </div>`).join('');
   }
 
@@ -196,20 +181,15 @@
   function renderPedidos() {
     document.getElementById('listaPedidos').innerHTML = (window.marbeDB.pedidos || []).map((p, i) => `
       <div class="card-list"><strong>OS: ${p.os} - ${p.cliente}</strong><br>
-        <button class="btn" style="background:var(--info); display:inline-block; width:48%" onclick="editarExistente('pedidos', ${i})">EDITAR/DESC.</button>
-        <button class="btn" style="background:var(--dark); display:inline-block; width:48%" onclick="gerarPDF('PRODUCAO', ${i}, 'pedidos')">PDF PRODUÇÃO</button>
-        <input type="text" id="nf_${i}" placeholder="NF">
-        <div style="display:grid; grid-template-columns: 1fr 1fr; gap:5px;">
-            <input type="number" id="parc_${i}" placeholder="Parcelas">
-            <input type="date" id="data_${i}">
-        </div>
-        <button class="btn" style="background:var(--success)" onclick="faturar(${i})">FATURAR E ENTREGAR</button>
+        <button class="btn" style="background:var(--dark)" onclick="gerarPDF('PRODUCAO', ${i}, 'pedidos')">PDF PRODUÇÃO</button>
+        <input type="text" id="nf_${i}" placeholder="NF"><input type="number" id="parc_${i}" placeholder="Parc."><input type="date" id="data_${i}">
+        <button class="btn" style="background:var(--success)" onclick="faturar(${i})">FATURAR</button>
       </div>`).join('');
   }
 
   function faturar(i) {
     const nf = document.getElementById(`nf_${i}`).value, qtd = parseInt(document.getElementById(`parc_${i}`).value), dt = document.getElementById(`data_${i}`).value;
-    if(!nf || !qtd || !dt) return alert("Preencha NF, Parcelas e Data!");
+    if(!nf || !qtd || !dt) return alert("Erro");
     const p = window.marbeDB.pedidos[i]; const dataBase = new Date(dt + "T12:00:00");
     for(let j=0; j<qtd; j++) {
         let v = new Date(dataBase); v.setMonth(v.getMonth() + j);
@@ -221,14 +201,16 @@
   function gerarPDF(tipo, index, base) {
     const { jsPDF } = window.jspdf; const doc = new jsPDF(); const d = window.marbeDB[base][index];
     const clean = (t) => t ? t.normalize("NFD").replace(/[\u0300-\u036f]/g, "").toUpperCase() : "";
-    doc.setFontSize(11); doc.text("S B COMERCIO DE BORRACHAS E SERVICOS LTDA", 20, 15);
+    doc.setFontSize(10); doc.text("S B COMERCIO DE BORRACHAS E SERVICOS LTDA", 20, 15);
     if(tipo === 'PRODUCAO') {
-        doc.text(`VIA PRODUCAO - OS: ${d.os}`, 20, 23);
-        doc.autoTable({ startY: 28, head: [['ITEM', 'MAT.', 'HORAS', 'PESO BRUTO']], body: d.itens.map(i => [clean(i.n), clean(i.mat), i.h + "h", (i.kg_unit * 1.2 * i.q).toFixed(2) + " KG"]) });
+        doc.text(`VIA PRODUCAO - OS: ${d.os}`, 20, 22);
+        doc.autoTable({ startY: 28, head: [['ITEM', 'MAT.', 'HORAS', 'PESO BRUTO']], body: d.itens.map(i => [clean(i.n), clean(i.mat), (i.h || 0) + "H", (i.kg_unit * 1.2 * i.q).toFixed(2) + " KG"]) });
     } else {
-        doc.text(`ORCAMENTO - OS: ${d.os} | DATA: ${new Date().toLocaleDateString('pt-BR')}`, 20, 23);
-        doc.text(`CLIENTE: ${clean(d.cliente)} | CNPJ: ${d.cnpj || ""}`, 20, 30);
-        doc.autoTable({ startY: 40, head: [['DESCRICAO', 'MEDIDAS', 'QTD', 'TOTAL']], body: d.itens.map(i => [clean(i.n), i.med, i.q, (i.v*i.q).toFixed(2)]) });
+        doc.text(`ORCAMENTO - OS: ${d.os}`, 20, 22);
+        doc.text(`CLIENTE: ${clean(d.cliente)}`, 20, 28);
+        doc.text(`CNPJ: ${d.cnpj || ""}`, 20, 33);
+        doc.text(`ENDERECO: ${clean(d.endereco)}`, 20, 38);
+        doc.autoTable({ startY: 43, head: [['DESCRICAO', 'MEDIDAS', 'QTD', 'TOTAL']], body: d.itens.map(i => [clean(i.n), i.med, i.q, (i.v*i.q).toFixed(2)]) });
     }
     window.abrirPDFMobile(doc.output('blob'), d.os);
   }
@@ -238,7 +220,7 @@
     (window.marbeDB.pedidos || []).forEach(p => p.itens.forEach(it => {
         const mat = it.mat || "Nao identificado"; necessidade[mat] = (necessidade[mat] || 0) + (it.kg_unit * 1.2 * it.q);
     }));
-    let html = `<table><thead><tr><th>Material</th><th>Necessário</th><th>Estoque</th><th>Saldo</th></tr></thead><tbody>`;
+    let html = `<table><thead><tr><th>Material</th><th>Preciso</th><th>Estoque</th><th>Saldo</th></tr></thead><tbody>`;
     Object.keys(necessidade).forEach(mat => {
         const prec = necessidade[mat], comp = window.marbeDB.estoque[mat] || 0, saldo = comp - prec;
         html += `<tr><td>${mat}</td><td>${prec.toFixed(2)}kg</td><td><input type="number" value="${comp}" onchange="window.marbeDB.estoque['${mat}']=parseFloat(this.value); window.salvarNuvem();" style="width:60px"></td><td>${saldo.toFixed(2)}</td></tr>`;
@@ -246,16 +228,8 @@
     document.getElementById('dashboardSuprimentos').innerHTML = html + "</tbody></table>";
   }
 
-  function editarExistente(origem, index) {
-      const base = window.marbeDB[origem][index]; idEdicao = { origem, index, os: base.os };
-      document.getElementById('cnpj').value = base.cnpj || ""; document.getElementById('razao').value = base.cliente;
-      document.getElementById('endereco').value = base.endereco || ""; document.getElementById('osEdicaoLabel').innerText = base.os;
-      document.getElementById('btnCancelaEdit').style.display = 'block'; itensTemp = JSON.parse(JSON.stringify(base.itens));
-      renderTabelaAtual(); tab('orc');
-  }
-
   function renderBoletos() {
-    document.getElementById('listaBoletos').innerHTML = (window.marbeDB.financeiro || []).map((f, i) => `<div class="card-list">${f.cliente} | R$ ${f.valor.toFixed(2)} | Venc: ${f.venc} <button onclick="window.marbeDB.financeiro[${i}].pago=true; window.salvarNuvem();" style="float:right">PAGO</button></div>`).join('');
+    document.getElementById('listaBoletos').innerHTML = (window.marbeDB.financeiro || []).map((f, i) => `<div class="card-list">${f.cliente} | R$ ${f.valor.toFixed(2)} | Venc: ${f.venc} <button onclick="window.marbeDB.financeiro[${i}].pago=true; window.salvarNuvem();" style="float:right">OK</button></div>`).join('');
   }
 
   function renderCustos() {
