--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Sistema Marbe v31.35 - Correção Total Produção</title>
+  <title>Sistema Marbe v31.36 - Botão Editar Restaurado</title>
   
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -65,6 +65,8 @@
     table th, table td { border: 1px solid #ddd; padding: 5px; text-align: left; }
     .card-list { background: #fff; border: 1px solid #ddd; padding: 10px; border-radius: 6px; margin-bottom: 8px; border-left: 4px solid #ccc; }
     .editable-input { width: 100%; border: 1px solid #ffd666 !important; background: #fffbe6; padding: 3px; }
+    .negativo { color: var(--danger); font-weight: bold; }
+    .positivo { color: var(--success); font-weight: bold; }
   </style>
 </head>
 <body>
@@ -95,13 +97,19 @@
   </div>
 
   <div id="orc" class="section">
-    <label>OS: <strong id="osLabel"></strong></label>
+    <label>OS em Edição: <strong id="osEdicaoLabel">Nova</strong></label>
     <label>CNPJ Cliente</label><input type="text" id="cnpj" onblur="buscaCNPJ(this.value)">
     <label>Razão Social</label><input type="text" id="razao">
-    <label>Endereço</label><input type="text" id="endereco">
-    <table><thead><tr><th>Descrição</th><th>Qtd</th><th>Unit.</th><th>X</th></tr></thead><tbody id="corpoAtual"></tbody></table>
+    <label>Endereço Completo</label><input type="text" id="endereco">
+    <table><thead><tr><th>Descrição</th><th>Medidas</th><th>Qtd</th><th>Unit.</th><th>X</th></tr></thead><tbody id="corpoAtual"></tbody></table>
+    <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px;">
+        <div><label>Frete</label><select id="frete"><option>POR CONTA DO CLIENTE</option><option>POR CONTA DA EMPRESA</option></select></div>
+        <div><label>Prazo Entrega</label><input type="text" id="prazo" value="10 DIAS ÚTEIS"></div>
+    </div>
+    <label>Forma de Pagamento</label><textarea id="pagamento">50% + BOLETO 28DD.</textarea>
     <h3 style="text-align:right">Total: <span id="totalOrc">R$ 0,00</span></h3>
-    <button class="btn" style="background:var(--primary)" onclick="salvarOrcamento()">SALVAR NO HISTÓRICO</button>
+    <button class="btn" style="background:var(--primary)" onclick="salvarOrcamento()">SALVAR PEDIDO / ORÇAMENTO</button>
+    <button id="btnCancelaEdit" class="btn" style="background:var(--danger); display:none;" onclick="cancelarEdicao()">CANCELAR EDIÇÃO</button>
   </div>
 
   <div id="historico" class="section"><div id="listaOrcamentos"></div></div>
@@ -118,6 +126,7 @@
 
 <script>
   let itensTemp = [];
+  let idEdicao = null;
 
   function tab(id) {
     document.querySelectorAll('.section, .tab-btn').forEach(e => e.classList.remove('active'));
@@ -155,21 +164,29 @@
     let total = 0;
     document.getElementById('corpoAtual').innerHTML = itensTemp.map((it, i) => {
         total += it.v * it.q;
-        return `<tr><td><input class="editable-input" value="${it.n}" onchange="itensTemp[${i}].n=this.value"></td><td><input type="number" class="editable-input" value="${it.q}" onchange="itensTemp[${i}].q=parseInt(this.value); renderTabelaAtual()"></td><td>${it.v.toFixed(2)}</td><td onclick="itensTemp.splice(${i},1);renderTabelaAtual()">X</td></tr>`;
+        return `<tr><td><input class="editable-input" value="${it.n}" onchange="itensTemp[${i}].n=this.value"></td><td>${it.med}</td><td><input type="number" class="editable-input" value="${it.q}" onchange="itensTemp[${i}].q=parseInt(this.value); renderTabelaAtual()"></td><td>${it.v.toFixed(2)}</td><td onclick="itensTemp.splice(${i},1);renderTabelaAtual()">X</td></tr>`;
     }).join('');
     document.getElementById('totalOrc').innerText = "R$ " + total.toFixed(2);
   }
 
   function salvarOrcamento() {
-    window.marbeDB.orçamentos.push({ os: window.marbeDB.os, cliente: document.getElementById('razao').value, cnpj: document.getElementById('cnpj').value, endereco: document.getElementById('endereco').value, itens: JSON.parse(JSON.stringify(itensTemp)), total: itensTemp.reduce((a,b)=>a+(b.v*b.q),0) });
-    window.marbeDB.os++; window.salvarNuvem(); itensTemp = []; renderTabelaAtual(); tab('historico');
+    const orcData = { os: idEdicao ? idEdicao.os : window.marbeDB.os, cliente: document.getElementById('razao').value, cnpj: document.getElementById('cnpj').value, endereco: document.getElementById('endereco').value, itens: JSON.parse(JSON.stringify(itensTemp)), frete: document.getElementById('frete').value, prazo: document.getElementById('prazo').value, pagamento: document.getElementById('pagamento').value, total: itensTemp.reduce((a,b)=>a+(b.v*b.q),0) };
+    if(idEdicao) {
+        if(idEdicao.origem === 'pedidos') window.marbeDB.pedidos[idEdicao.index] = orcData;
+        else window.marbeDB.orçamentos[idEdicao.index] = orcData;
+        idEdicao = null; document.getElementById('btnCancelaEdit').style.display = 'none'; document.getElementById('osEdicaoLabel').innerText = "Nova";
+    } else {
+        window.marbeDB.orçamentos.push(orcData); window.marbeDB.os++;
+    }
+    window.salvarNuvem(); itensTemp = []; renderTabelaAtual(); tab('historico');
   }
 
   function renderOrcamentos() {
     document.getElementById('listaOrcamentos').innerHTML = (window.marbeDB.orçamentos || []).map((o, i) => `
       <div class="card-list"><strong>OS: ${o.os} - ${o.cliente}</strong><br>
-        <button class="btn" style="background:var(--info); display:inline-block; width:48%" onclick="gerarPDF('CLIENTE', ${i}, 'orçamentos')">PDF CLIENTE</button>
-        <button class="btn" style="background:var(--success); display:inline-block; width:48%" onclick="fecharPedido(${i})">FECHAR PEDIDO</button>
+        <button class="btn" style="background:var(--info); display:inline-block; width:31%" onclick="gerarPDF('CLIENTE', ${i}, 'orçamentos')">PDF</button>
+        <button class="btn" style="background:var(--dark); display:inline-block; width:31%" onclick="editarExistente('orçamentos', ${i})">EDITAR</button>
+        <button class="btn" style="background:var(--success); display:inline-block; width:31%" onclick="fecharPedido(${i})">FECHAR</button>
       </div>`).join('');
   }
 
@@ -178,18 +195,24 @@
     window.marbeDB.pedidos.push(orc); window.salvarNuvem(); tab('pedidos');
   }
 
+  // FUNÇÃO RENDER PEDIDOS RESTAURADA COM BOTÃO EDITAR
   function renderPedidos() {
     document.getElementById('listaPedidos').innerHTML = (window.marbeDB.pedidos || []).map((p, i) => `
       <div class="card-list"><strong>OS: ${p.os} - ${p.cliente}</strong><br>
-        <button class="btn" style="background:var(--dark)" onclick="gerarPDF('PRODUCAO', ${i}, 'pedidos')">PDF PRODUÇÃO</button>
-        <input type="text" id="nf_${i}" placeholder="NF"><input type="number" id="parc_${i}" placeholder="Parc."><input type="date" id="data_${i}">
+        <button class="btn" style="background:var(--info); width:48%; display:inline-block" onclick="editarExistente('pedidos', ${i})">EDITAR/DESC.</button>
+        <button class="btn" style="background:var(--dark); width:48%; display:inline-block" onclick="gerarPDF('PRODUCAO', ${i}, 'pedidos')">PDF PRODUÇÃO</button>
+        <input type="text" id="nf_${i}" placeholder="NF" style="margin-top:5px">
+        <div style="display:grid; grid-template-columns: 1fr 1fr; gap:5px;">
+            <input type="number" id="parc_${i}" placeholder="Parc.">
+            <input type="date" id="data_${i}">
+        </div>
         <button class="btn" style="background:var(--success)" onclick="faturar(${i})">FATURAR</button>
       </div>`).join('');
   }
 
   function faturar(i) {
     const nf = document.getElementById(`nf_${i}`).value, qtd = parseInt(document.getElementById(`parc_${i}`).value), dt = document.getElementById(`data_${i}`).value;
-    if(!nf || !qtd || !dt) return alert("Erro");
+    if(!nf || !qtd || !dt) return alert("Preencha NF, Parcelas e Data!");
     const p = window.marbeDB.pedidos[i]; const dataBase = new Date(dt + "T12:00:00");
     for(let j=0; j<qtd; j++) {
         let v = new Date(dataBase); v.setMonth(v.getMonth() + j);
@@ -211,6 +234,10 @@
         doc.text(`CNPJ: ${d.cnpj || ""}`, 20, 33);
         doc.text(`ENDERECO: ${clean(d.endereco)}`, 20, 38);
         doc.autoTable({ startY: 43, head: [['DESCRICAO', 'MEDIDAS', 'QTD', 'TOTAL']], body: d.itens.map(i => [clean(i.n), i.med, i.q, (i.v*i.q).toFixed(2)]) });
+        const fY = doc.lastAutoTable.finalY + 10;
+        doc.text(`TOTAL: R$ ${d.total.toFixed(2)}`, 190, fY, {align:'right'});
+        doc.setFontSize(8); doc.text(`FRETE: ${clean(d.frete)} | PRAZO: ${clean(d.prazo)}`, 20, fY + 8);
+        doc.text(`PAGAMENTO: ${clean(d.pagamento)}`, 20, fY + 13);
     }
     window.abrirPDFMobile(doc.output('blob'), d.os);
   }
@@ -223,13 +250,27 @@
     let html = `<table><thead><tr><th>Material</th><th>Preciso</th><th>Estoque</th><th>Saldo</th></tr></thead><tbody>`;
     Object.keys(necessidade).forEach(mat => {
         const prec = necessidade[mat], comp = window.marbeDB.estoque[mat] || 0, saldo = comp - prec;
-        html += `<tr><td>${mat}</td><td>${prec.toFixed(2)}kg</td><td><input type="number" value="${comp}" onchange="window.marbeDB.estoque['${mat}']=parseFloat(this.value); window.salvarNuvem();" style="width:60px"></td><td>${saldo.toFixed(2)}</td></tr>`;
+        html += `<tr><td>${mat}</td><td>${prec.toFixed(2)}kg</td><td><input type="number" value="${comp}" onchange="window.marbeDB.estoque['${mat}']=parseFloat(this.value); window.salvarNuvem();" style="width:60px"></td><td class="${saldo < 0 ? 'negativo' : 'positivo'}">${saldo.toFixed(2)}</td></tr>`;
     });
     document.getElementById('dashboardSuprimentos').innerHTML = html + "</tbody></table>";
   }
 
+  function editarExistente(origem, index) {
+      const base = window.marbeDB[origem][index]; idEdicao = { origem, index, os: base.os };
+      document.getElementById('cnpj').value = base.cnpj || ""; document.getElementById('razao').value = base.cliente;
+      document.getElementById('endereco').value = base.endereco || ""; document.getElementById('osEdicaoLabel').innerText = base.os;
+      document.getElementById('frete').value = base.frete; document.getElementById('prazo').value = base.prazo; document.getElementById('pagamento').value = base.pagamento;
+      document.getElementById('btnCancelaEdit').style.display = 'block'; itensTemp = JSON.parse(JSON.stringify(base.itens));
+      renderTabelaAtual(); tab('orc');
+  }
+
+  function cancelarEdicao() {
+      idEdicao = null; itensTemp = []; document.getElementById('btnCancelaEdit').style.display = 'none';
+      document.getElementById('osEdicaoLabel').innerText = "Nova"; renderTabelaAtual(); tab('calc');
+  }
+
   function renderBoletos() {
-    document.getElementById('listaBoletos').innerHTML = (window.marbeDB.financeiro || []).map((f, i) => `<div class="card-list">${f.cliente} | R$ ${f.valor.toFixed(2)} | Venc: ${f.venc} <button onclick="window.marbeDB.financeiro[${i}].pago=true; window.salvarNuvem();" style="float:right">OK</button></div>`).join('');
+    document.getElementById('listaBoletos').innerHTML = (window.marbeDB.financeiro || []).map((f, i) => `<div class="card-list">${f.cliente} | R$ ${f.valor.toFixed(2)} | Venc: ${f.venc} <button class="btn" style="background:green; width:auto; display:inline-block; padding:5px; float:right" onclick="window.marbeDB.financeiro[${i}].pago=true; window.salvarNuvem();">PAGO</button></div>`).join('');
   }
 
   function renderCustos() {
