--- a/index.html
+++ b/index.html
@@ -220,10 +220,11 @@
       <div class="card-list">
         <strong>OS: ${o.os} - ${o.cliente}</strong><br>
         <span style="font-size:12px; color:#666">${window.fmtMoney(o.total)}</span><br>
-        <div style="display:flex; gap:5px; margin-top:5px;">
-            <button class="btn" style="background:var(--info); padding:8px; margin:0" onclick="gerarPDF('CLIENTE', ${i}, 'orçamentos')">PDF</button>
-            <button class="btn" style="background:var(--dark); padding:8px; margin:0" onclick="editarExistente('orçamentos', ${i})">EDITAR</button>
-            <button class="btn" style="background:var(--success); padding:8px; margin:0" onclick="fecharPedido(${i})">FECHAR</button>
+        <div style="display:flex; gap:5px; margin-top:5px; flex-wrap: wrap;">
+            <button class="btn" style="background:var(--info); padding:8px; margin:0; flex:1" onclick="gerarPDF('CLIENTE', ${i}, 'orçamentos')">PDF ORC</button>
+            <button class="btn" style="background:var(--dark); padding:8px; margin:0; flex:1" onclick="gerarPDF('PRODUCAO', ${i}, 'orçamentos')">VER PROD</button>
+            <button class="btn" style="background:var(--dark); padding:8px; margin:0; flex:1" onclick="editarExistente('orçamentos', ${i})">EDITAR</button>
+            <button class="btn" style="background:var(--success); padding:8px; margin:0; flex:1" onclick="fecharPedido(${i})">FECHAR</button>
         </div>
       </div>`).join('');
   }
