--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Sistema v31.40</title>
+  <title>Sistema v31.41</title>
   
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -60,7 +60,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
   
   <style>
-    :root { --primary: #2c7be5; --success: #28a745; --danger: #d9534f; --info: #17a2b8; --dark: #333; }
+    :root { --primary: #2c7be5; --success: #28a745; --danger: #d9534f; --info: #17a2b8; --dark: #333; --prod: #6f42c1; }
     body { font-family: 'Segoe UI', sans-serif; background: #f4f7f6; margin: 0; padding: 5px; color: #333; }
     .container { max-width: 1000px; background: #fff; padding: 15px; border-radius: 8px; margin: auto; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
     .tabs { display: flex; gap: 4px; margin-bottom: 15px; flex-wrap: wrap; }
@@ -243,9 +243,10 @@
         <strong>OS: ${o.os} - ${o.cliente}</strong><br>
         <span style="font-size:12px; color:#666">${window.fmtMoney(o.total)}</span><br>
         <div style="display:flex; gap:5px; margin-top:5px;">
-            <button class="btn" style="background:var(--info); padding:8px; margin:0" onclick="gerarPDF('CLIENTE', ${i}, 'orçamentos')">PDF</button>
-            <button class="btn" style="background:var(--dark); padding:8px; margin:0" onclick="editarExistente('orçamentos', ${i})">EDITAR</button>
-            <button class="btn" style="background:var(--success); padding:8px; margin:0" onclick="fecharPedido(${i})">FECHAR</button>
+            <button class="btn" style="background:var(--info); padding:8px; margin:0; font-size:10px;" onclick="gerarPDF('CLIENTE', ${i}, 'orçamentos')">PDF</button>
+            <button class="btn" style="background:var(--prod); padding:8px; margin:0; font-size:10px;" onclick="gerarPDF('PRODUCAO', ${i}, 'orçamentos')">PROD</button>
+            <button class="btn" style="background:var(--dark); padding:8px; margin:0; font-size:10px;" onclick="editarExistente('orçamentos', ${i})">EDITAR</button>
+            <button class="btn" style="background:var(--success); padding:8px; margin:0; font-size:10px;" onclick="fecharPedido(${i})">FECHAR</button>
         </div>
       </div>`).join('');
   }
