--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Sistema v31.41</title>
+  <title>Sistema v31.42 - Login</title>
   
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -23,6 +23,7 @@
     const db = getDatabase(app);
     window.marbeDB = { os: 330, orçamentos: [], pedidos: [], financeiro: [], custos: {vh: 50, mats: []}, estoque: {} };
 
+    // Só carrega dados se passar pelo login (opcional, mas visualmente melhor carregar em background)
     onValue(ref(db, 'sistema/'), (snapshot) => {
       const data = snapshot.val();
       if (data) { 
@@ -62,7 +63,16 @@
   <style>
     :root { --primary: #2c7be5; --success: #28a745; --danger: #d9534f; --info: #17a2b8; --dark: #333; --prod: #6f42c1; }
     body { font-family: 'Segoe UI', sans-serif; background: #f4f7f6; margin: 0; padding: 5px; color: #333; }
-    .container { max-width: 1000px; background: #fff; padding: 15px; border-radius: 8px; margin: auto; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
+    
+    /* ESTILOS DO LOGIN */
+    #loginScreen { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: white; z-index: 9999; display: flex; flex-direction: column; justify-content: center; align-items: center; padding: 20px; box-sizing: border-box; }
+    .login-box { width: 100%; max-width: 350px; text-align: center; }
+    .login-logo { max-width: 100%; height: auto; margin-bottom: 30px; }
+    .login-input { width: 100%; padding: 12px; margin-bottom: 15px; border: 1px solid #ddd; border-radius: 6px; font-size: 16px; box-sizing: border-box; }
+    .login-btn { width: 100%; padding: 12px; background: #002B49; color: white; border: none; border-radius: 6px; font-size: 16px; font-weight: bold; cursor: pointer; }
+    .login-btn:hover { background: #00406b; }
+
+    .container { max-width: 1000px; background: #fff; padding: 15px; border-radius: 8px; margin: auto; box-shadow: 0 4px 12px rgba(0,0,0,0.1); display: none; /* Escondido inicialmente */ }
     .tabs { display: flex; gap: 4px; margin-bottom: 15px; flex-wrap: wrap; }
     .tab-btn { flex: 1; padding: 10px; border: none; background: #e9ecef; cursor: pointer; font-weight: bold; border-radius: 6px; font-size: 10px; text-transform: uppercase; min-width: 70px; transition: 0.2s; }
     .tab-btn:hover { background: #dee2e6; }
@@ -85,7 +95,17 @@
 </head>
 <body>
 
-<div class="container">
+<div id="loginScreen">
+    <div class="login-box">
+        <img src="logo.jpg" alt="Logo Grupo Marbe" class="login-logo">
+        <input type="text" id="loginUser" class="login-input" placeholder="Usuário">
+        <input type="password" id="loginPass" class="login-input" placeholder="Senha">
+        <button class="login-btn" onclick="fazerLogin()">ENTRAR</button>
+        <p style="font-size:12px; color:#888; margin-top:15px">Sistema Interno v31.42</p>
+    </div>
+</div>
+
+<div class="container" id="appContainer">
   <div class="tabs">
     <button class="tab-btn active" onclick="tab('calc')">Cálculo</button>
     <button class="tab-btn" onclick="tab('orc')">Orçamento</button>
@@ -144,6 +164,20 @@
 <script>
   let itensTemp = [];
   let idEdicao = null;
+
+  // --- FUNÇÃO DE LOGIN ---
+  function fazerLogin() {
+      const u = document.getElementById('loginUser').value;
+      const p = document.getElementById('loginPass').value;
+
+      // CREDENCIAIS (Pode alterar aqui)
+      if (u === 'admin' && p === '1234') {
+          document.getElementById('loginScreen').style.display = 'none';
+          document.getElementById('appContainer').style.display = 'block';
+      } else {
+          alert("Usuário ou senha incorretos!");
+      }
+  }
 
   function tab(id) {
     document.querySelectorAll('.section, .tab-btn').forEach(e => e.classList.remove('active'));
