--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       const p = document.getElementById('loginPass').value;
 
       // CREDENCIAIS (Pode alterar aqui)
-      if (u === 'abel' && p === '201000') {
+      if (u === 'Abel' && p === '201000') {
           document.getElementById('loginScreen').style.display = 'none';
           document.getElementById('appContainer').style.display = 'block';
       } else {
