--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Sistema v32.1 (Revestimento Ajustado)</title>
+  <title>Sistema v32.2 (Logo OK)</title>
   
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -108,11 +108,11 @@
 
 <div id="loginScreen">
     <div class="login-box">
-        <img src="https://via.placeholder.com/150x50?text=MARBE+APP" alt="Logo Grupo Marbe" class="login-logo">
+        <img src="logo.jpg" alt="Logo Grupo Marbe" class="login-logo">
         <input type="text" id="loginUser" class="login-input" placeholder="Usuário">
         <input type="password" id="loginPass" class="login-input" placeholder="Senha">
         <button class="login-btn" onclick="fazerLogin()">ENTRAR</button>
-        <p style="font-size:12px; color:#888; margin-top:15px">Sistema v32.1</p>
+        <p style="font-size:12px; color:#888; margin-top:15px">Sistema v32.2</p>
     </div>
 </div>
 
@@ -457,7 +457,7 @@
       ultimoCalculo = null;
   }
 
-  // --- FUNÇÕES DE ORÇAMENTO E BANCO DE DADOS (Inalteradas) ---
+  // --- FUNÇÕES DE ORÇAMENTO E BANCO DE DADOS ---
   async function buscaCNPJ(v) {
     const cnpj = v.replace(/\D/g, ''); if (cnpj.length !== 14) return;
     try {
